Test: fix leadership images on mobile?

--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ td {
 
 .table-image {
   width: 80%;
-  height: 10%;
+  height: 7%;
   border-radius: 10000px;
   margin: 10%;
 }
